<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/titulo_textview"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/numero_tentativas_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_tentativas_textview"
                android:textColor="@color/colorAccent"
                android:textSize="80sp" />


            <EditText
                android:id="@+id/numero_edittext"
                android:layout_width="300dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:hint="@string/hint_numero_edittext"
                android:inputType="number" />

            <TextView
                android:id="@+id/feedback_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ff0000"
                android:textSize="16sp"
                android:visibility="gone" />


            <Button
                android:id="@+id/tentar_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tentar_button"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/resetar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/resetar_button"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/dificuldade_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/dificuldade_1_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dificuldade_1_radiobutton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificuldade_2_radiobutton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificuldade_3_radiobutton" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>